# the-crate

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile.dev  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: admin.py  albums.py
backend/app/core/: config.py  storage.py
backend/app/crud/: album.py
backend/app/db/: seed.py  session.py
backend/app/models/: album.py
backend/app/schemas/: album.py
backend/scripts/: dev-setup.sh
frontend/: Dockerfile.dev
frontend/src/: App.tsx
frontend/src/components/: AlbumGrid.tsx  Layout.tsx
